# top-bot-env

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
top_bot/: main.py
top_bot/core/: models.py  settings.py
top_bot/core/io/: __init__.py  base.py
top_bot/core/io/group/: __init__.py  handlers.py
top_bot/core/io/media/: __init__.py  handlers.py  middleware.py
top_bot/core/io/start/: handlers.py  middleware.py
top_bot/core/io/subject/: handlers.py
top_bot/core/service/: auth.py  service.py
top_bot/utils/: __init__.py  callbacks.py  commands.py  keyboards.py  states.py
