[tool.poetry]
name = "top-bot"
version = "1.0"
description = "This environment inclusive all deps for aiogram bot"
authors = ["LonelyLeob <l0nelyleob@gmail.com> & Kejtе <kejte1@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b7"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "top_bot.main:load"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
